--- a/app/styles/routes/index.css
+++ b/app/styles/routes/index.css
@@ -1,20 +1,39 @@
-.page__title {
-    display: block;
-    text-align: center;
-    padding: 2rem 1rem;
-}
+.page-title {
+  display: block;
+  text-align: center;
+  padding: 2rem 1rem;
 
-.page__title h1 {
+  h1 {
     font-size: 3rem;
     font-weight: 500;
     line-height: 1.5;
     margin: 0;
+  }
+
+  @media only screen and (min-width: 1200px) {
+    max-width: 1500px;
+    margin: 0 auto;
+    padding: 3.2rem 6.4rem;
+  }
 }
 
-@media only screen and (min-width: 1024px) {
-    .page__title {
-        max-width: 1500px;
-        margin: 0 auto;
-        padding: 3.2rem 6.4rem;
-    }
+.product-list {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 20px;
+  padding: 0 20px 30px;
+
+  @media only screen and (min-width: 640px) {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+    padding: 2rem 4rem;
+  }
+
+  @media only screen and (min-width: 1024px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  @media only screen and (min-width: 1200px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
